fixed disappearing numbers on overflowed cells

--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,7 @@ span.checkbox-label {
     width: 100%;
     height: 100%;
     padding: 2px 4px 2px 4px;
+    white-space: pre;
 }
 
 input.content-cell-content {
